# conductor

./: .gitignore  .pre-commit-config.yaml  README.MD  output.txt  pyproject.toml  requirements.txt  run.py  specified_resaerch_team.json  token.json
conductor/: __init__.py  agents.py  chains.py  llms.py  models.py  parsers.py  prompts.py  runner.py  tasks.py  tools.py  utils.py  vectors.py  zen.py
conductor/agents/: edges.py  graph.py  models.py  nodes.py  signatures.py  state.py  tools.py
conductor/audio/: transform.py
conductor/builder/: agent.py  signatures.py
conductor/chains/: __init__.py  models.py  prompts.py  tools.py
conductor/collect/: __main__.py  items.py  main.py  middlewares.py  pipelines.py  settings.py
conductor/collect/spiders/: summary.py  title.py
conductor/context/: __init__.py  apify_.py  apollo.py
conductor/crews/: cache.py  callbacks.py  functions.py  handlers.py  models.py
conductor/crews/marketing/: __init__.py  agents.py  crew.py  tasks.py  tools.py  utils.py
conductor/crews/rag_marketing/: __init__.py  agents.py  chains.py  crew.py  prompts.py  tasks.py  tools.py
conductor/database/: aws.py  pinecone.py  pinecone_.py
conductor/flow/: builders.py  credibility.py  flow.py  models.py  rag.py  research.py  retriever.py  runner.py  search.py  signatures.py  specify.py  team.py  utils.py
conductor/functions/: apify.py  apify_.py  apollo.py  email.py  email_.py  google.py  pinecone.py  pinecone_.py  spiders.py
conductor/graph/: create.py  credibility.py  extraction.py  flow.py  models.py  research.py  signatures.py  tools.py
conductor/images/: search.py  signatures.py
conductor/internal/: discord.py
conductor/internal/discord_/: discord_collector.py  discord_listener.py
conductor/pipelines/: models.py  research.py  vectorestores.py
conductor/profiles/: factory.py  generate.py  models.py  outputs.py  runner.py  sigantures.py  signatures.py  utils.py
conductor/rag/: chunking.py  client.py  embeddings.py  ingest.py  models.py  utils.py
conductor/reports/: enrich.py  generators.py  html_.py  models.py  outputs.py  prompts.py
conductor/reports/builder/: conversations.py  editor.py  models.py  outline.py  (+5 more)
conductor/retrievers/: pinecone_.py
conductor/search/: __init__.py
conductor/steps/: summary.py
conductor/summarize/: models.py  signatures.py  summarize.py
conductor/template/: generate.py  models.py  signatures.py
conductor/utils/: graph.py  timeline.py
credentials/gcp/: credentials.json  token.json
tests/: __init__.py  conftest.py  constants.py  generate_pdf.py  generate_report_html.py  generate_report_json.py  generate_test_data.py  generate_test_rag_index.py  output.txt  test_agent_builder.py  test_agent_utils.py  test_agents.py  test_apify_functions.py  test_apollo_functions.py  test_audio.py  test_callbacks.py  test_chain_tools.py  test_chains.py  test_context.py  test_crew.py  test_email_functions.py  test_embeddings.py  test_flow.py  test_flow_retriever.py  test_google_functions.py  test_graph_profile_factory.py  test_image_search.py  test_litellm_proxy.py  test_llms.py  test_pdf_ingestion.py  test_pinecone_functions.py  test_profile_pydantic_helpers.py  test_profiles.py  test_rag.py  test_rag_chains.py  test_rag_client.py  test_rag_ingest.py  test_rag_utils.py  test_relationship_extraction.py  test_report.py  (+20 more)
(+5 files in other folders)
