[tool.poetry]
name = "conductor"
version = "0.2.2"
description = ""
authors = ["csmizzle <chrissmith700@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.1.14"
boto3 = "^1.34.77"
requests = "^2.31.0"
langchain-community = "^0.0.31"
openai = "^1.16.1"
langchainhub = "^0.1.15"
boto3-stubs = {extras = ["essential"], version = "^1.34.83"}
langsmith = "^0.1.50"
crewai = {extras = ["tools"], version = "^0.30.11"}
jmespath = "^1.0.1"
bs4 = "^0.0.2"
langchain-fireworks = "^0.1.2"
anthropic = "^0.25.8"
pdfkit = "^1.0.0"
google-search-results = "^2.4.2"
jinja2 = "^3.1.4"
redis = "^5.0.7"
discord-py = "^2.4.0"
python-docx = "^1.1.2"
langchain-elasticsearch = "^0.2.2"
unstructured = "^0.15.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pyyaml = "^6.0.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
