[tool.poetry]
name = "conductor"
version = "0.3.13"
description = ""
authors = ["csmizzle <chrissmith700@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
boto3 = "^1.34.77"
requests = "^2.31.0"
openai = "^1.16.1"
langchainhub = "^0.1.15"
boto3-stubs = {extras = ["essential"], version = "^1.34.83"}
langsmith = "^0.1.98"
crewai = {extras = ["tools"], version = "^0.41.1"}
jmespath = "^1.0.1"
bs4 = "^0.0.2"
anthropic = "^0.25.8"
pdfkit = "^1.0.0"
google-search-results = "^2.4.2"
jinja2 = "^3.1.4"
redis = "^5.0.7"
discord-py = "^2.4.0"
python-docx = "^1.1.2"
nest-asyncio = "^1.6.0"
discord-webhook = "^1.3.1"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
langchain-aws = "^0.1.16"
langchain-elasticsearch = "^0.2.2"
langchain-core = "^0.2.29"
zenrows = "^1.3.2"
pyvis = "^0.3.2"
matplotlib = "^3.9.2"
reportlab = "^4.2.2"
imgkit = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
